# funderberker

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  apicnotes  build.rs  disk.img  fat12.img  init.sh  limine.conf  linker-x86_64.ld  media.sh  questions.txt  todo
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
arch/: Cargo.toml
arch/src/: lib.rs  paging.rs  vaa.rs
arch/src/x86_64/: event.rs  interrupts.rs  mod.rs
arch/src/x86_64/apic/: ioapic.rs  lapic.rs  mod.rs
arch/src/x86_64/cpu/: mod.rs  msr.rs
arch/src/x86_64/paging/: flags.rs  mod.rs  page_size.rs  pat.rs
boot/: Cargo.toml  build.rs
boot/src/: main.rs  test.rs
boot/src/acpi/: hpet.rs  madt.rs  mcfg.rs  mod.rs  rsdp.rs  xsdt.rs
boot/src/boot/: limine.rs  mod.rs
drivers/: Cargo.toml
drivers/src/: lib.rs
drivers/src/bus/: pcie.rs
drivers/src/clock/: mod.rs  rtc.rs
drivers/src/storage/: mod.rs
drivers/src/storage/nvme/: pcie.rs
drivers/src/timer/: apic.rs  hpet.rs  mod.rs  pit.rs
hypervisor/: Cargo.toml
hypervisor/src/: lib.rs  mem.rs
hypervisor/src/svm/: cpu.rs  mod.rs
kernel/: Cargo.toml
kernel-core/: Cargo.toml
kernel-core/src/: main.rs
kernel/src/: ioapic.rs  lapic.rs  lib.rs  main.rs  print.rs  test.rs
kernel/src/acpi/: __madt.rs  _mod.rs  _xsdt.rs  hpet.rs  madt.rs  mcfg.rs  mod.rs  rsdp.rs  xsdt.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: _mp.rs  cpu.rs  event.rs  gdt.rs  interrupts.rs  isrs.rs  mod.rs  mp.rs  paging.rs  tsc.rs
kernel/src/arch/x86_64/_hav/: _svm.rs  _vmx.rs  mod.rs
kernel/src/arch/x86_64/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/arch/x86_64/cpu/: mod.rs  msr.rs
kernel/src/arch/x86_64/hav/: mod.rs  svm.rs  vmx.rs
kernel/src/arch/x86_64/paging/: flags.rs  mod.rs  page_size.rs  pat.rs
kernel/src/boot/: limine.rs  mod.rs
kernel/src/dev/: cmos.rs  framebuffer.rs  mod.rs  serial.rs
kernel/src/dev/bus/: pcie.rs
kernel/src/dev/clock/: mod.rs  rtc.rs
kernel/src/dev/storage/: mod.rs
kernel/src/dev/time/: hpet.rs  mod.rs  pit.rs
kernel/src/dev/timer/: apic.rs  hpet.rs  mod.rs  pit.rs
kernel/src/mem/: heap.rs  mmio.rs  mod.rs  paging.rs  slab.rs  vaa.rs  vmm.rs
kernel/src/mem/pmm/: buddy.rs  bump.rs  mod.rs
kernel/src/mem/slab/: heap.rs  internal.rs  mod.rs
kernel/src/mem/vmm/: allocator.rs  heap.rs  mod.rs  slab.rs
kernel/src/print/: framebuffer.rs  mod.rs  serial.rs
kernel/src/sched/: constant.rs  mod.rs
kernel/src/sync/: spinlock.rs
kernel/src/virt/: mem.rs  mod.rs  svm.rs
kernel/src/virt/sched/: constant.rs  mod.rs
kernel/src/virt/svm/: cpu.rs  mod.rs
logger/: Cargo.toml
logger/src/: framebuffer.rs  lib.rs  serial.rs
macros/: Cargo.toml
macros/src/: lib.rs
pmm/: Cargo.toml
pmm/src/: buddy.rs  bump.rs  lib.rs
scheduler/: Cargo.toml
scheduler/src/: constant.rs  lib.rs
slab/: Cargo.toml
slab/src/: heap.rs  internal.rs  lib.rs
src/: boot.S  main.rs  print.rs  uefi.rs  util.rs  utils.rs
src/acpi/: mod.rs
src/arch/: mod.rs
src/arch/x86_64/: cpu.rs  gdt.rs  interrupts.rs  mod.rs  paging.rs  serial.rs
src/boot/: limine.rs
src/lib/: _linked_list.rs  allocator.rs  bitmap.rs  boxed.rs  linked_list.rs  mem.rs  mod.rs
src/mem/: buddy.rs  mod.rs  pmm.rs  slab.rs
src/mem/pmm/: bump.rs  mod.rs
src/mem/vmm/: _slab.rs  kheap.rs  mod.rs  slab.rs
src/print/: framebuffer.rs  mod.rs  serial.rs
src/utils/: allocator.rs  bitmap.rs  mod.rs  stacklist.rs
utils/: Cargo.toml
utils/src/: id_allocator.rs  lib.rs  mem.rs
utils/src/collections/: bitmap.rs  fast_lazy_static.rs  linkedlist.rs  mod.rs  stacklist.rs  static_bitmap.rs
utils/src/collections/id/: hander.rs  mod.rs  tracker.rs
utils/src/mem/: mmio.rs  mod.rs
utils/src/sync/: mod.rs  spinlock.rs
