[package]
name = "funderberker"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = { version = "0.3.1", optional = true }

[features]
default = ["limine", "amd", "framebuffer", "paging_4", "pmm_bump"]

# x86_64 CPU vendors
intel = []
amd = []

# booting method
limine = ["dep:limine"]

# logging methods
serial = []
framebuffer = []

# paging modes
paging_4 = []
paging_5 = [] # NOT SUPPORTED YET!

# PMM page allocator algorithm
pmm_bump = []
pmm_buddy = [] # NOT SUPPORTED YET!
