[package]
name = "boot"
version = "0.1.0"
edition = "2024"

[dependencies]
limine = { version = "0.5.0", optional = true }

kernel = { version = "0.1.0", path = "../kernel" }
drivers = { version = "0.1.0", path = "../drivers" }
hypervisor = { version = "0.1.0", path = "../hypervisor" }
logger = { version = "0.1.0", path = "../logger" }
utils = { version = "0.1.0", path = "../utils" }

[features]
default = ["limine", "serial", "framebuffer"]

# logging methods
serial = []
framebuffer = []

# Booting method
limine = ["dep:limine"]
