[package]
name = "drivers"
version = "0.1.0"
edition = "2024"

[lib]
name = "drivers"

[dependencies]
utils = { path = "../utils" }
modular-bitfield = { version = "0.12" }
kernel = { version = "0.1.0", path = "../kernel" }
logger = { version = "0.1.0", path = "../logger" }

[lints.clippy]
pedantic = "warn"

[features]
# PCI Express support
pcie = []

# Storage devices
nvme = ["pcie"]

# Timers and clocks
hpet = []
apic = []
pit = []
rtc = []
