[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
alloc = { version = "1.0.0", package = "rustc-std-workspace-alloc"}
modular-bitfield = { version = "0.12" }
utils = { version = "0.1.0", path = "../utils" }
limine = { version = "0.5.0", optional = true }
logger = { version = "0.1.0", path = "../logger" }
macros = { version = "0.1.0", path = "../macros" }

[features]
default = ["limine", "pmm_buddy", "paging_4", "framebuffer"]

framebuffer = []

limine = ["dep:limine"]

pmm_bump = []
pmm_buddy = []

paging_5 = []
paging_4 = []

[lints.clippy]
pedantic = "warn"
