[package]
name = "pmm"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { version = "0.1.0", path = "../utils" }
limine = { version = "0.5.0", optional = true }
logger = { version = "0.1.0", path = "../logger" }

[lints.clippy]
pedantic = "warn"

[features]
buddy = []

limine = ["dep:limine"]
