[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[lib]
name = "scheduler"

[dependencies]
kernel = { version = "0.1.0", path = "../kernel" }
utils = { version = "0.1.0", path = "../utils" }
logger = { version = "0.1.0", path = "../logger" }

[features]
default = ["constant"]

constant = []
