[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[lib]
name = "scheduler"

[dependencies]
arch = { version = "0.1.0", path = "../arch" }
utils = { version = "0.1.0", path = "../utils" }
logger = { version = "0.1.0", path = "../logger" }

[features]
default = ["constant"]

constant = []
